--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,31 +1,24 @@
 name: app_v2ray_manager
 description: "A new Flutter project."
-
-publish_to: 'none' 
-
-
 version: 1.0.0+1
 
 environment:
-  sdk: '>=3.3.3 <4.0.0'
-
+  sdk: ^3.8.1
 
 dependencies:
   flutter:
     sdk: flutter
-  flutter_v2ray: ^1.0.7
-  permission_handler: ^11.3.1
-  path_provider: ^2.1.3
-  provider: ^6.1.2
-  file_picker: ^8.0.5
-  fl_chart: ^0.68.0
+  flutter_v2ray: ^1.0.10
+  permission_handler: ^12.0.1
+  path_provider: ^2.1.5
+  provider: ^6.1.5
+  file_picker: ^10.0.0
+  fl_chart: ^1.0.0
   google_fonts: ^6.2.1
-  flutter_svg: ^2.0.10+1
-  shared_preferences: ^2.2.3
-
-
-
+  flutter_svg: ^2.2.0
+  shared_preferences: ^2.5.3
   cupertino_icons: ^1.0.6
+  installed_apps: 1.6.0
 
 dev_dependencies:
   flutter_test:
@@ -39,5 +32,4 @@ flutter:
 
 
   uses-material-design: true
-
 
